--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             мій дс - itsbim4ik
         </div>
         <div class="canal">
-            <a href="мій телеграмм канал">https://t.me/LogovoBim4ika</a>
+            <a href="https://t.me/LogovoBim4ika">Мій телеграм канал</a>
         </div>
         <div class="bot">
-            <a href="мій бот">https://t.me/Bim4ik_v_solo_bot</a>
+            <a href="https://t.me/Bim4ik_v_solo_bot">мій бот</a>
         </div>
         <div class="number-phone">
             Номер Телефона - +380994608213  , 0994608213
